public/lite/api/zh-CN/r1.9/_sources/generate/program_listing_file_include_converter_include_core_ops_gather.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_converter_include_core_ops_gather.h:

Program Listing for File gather.h
=================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_converter_include_core_ops_gather.h>` (``include/converter/include/core/ops/gather.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   
   #ifndef MINDSPORE_CORE_OPS_GATHER_H_
   #define MINDSPORE_CORE_OPS_GATHER_H_
   #include <map>
   #include <vector>
   #include <string>
   #include <memory>
   #include "ops/base_operator.h"
   #include "mindapi/base/types.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameGather = "Gather";
   class MIND_API Gather : public BaseOperator {
    public:
     MIND_API_BASE_MEMBER(Gather);
     Gather() : BaseOperator(kNameGather) { InitIOName({"param", "indices", "axis"}, {"output"}); }
     void Init() const {}
   };
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_GATHER_H_
